--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
     <script src="js/completion.js"></script>
     <script src="lang/chs.js"></script>
     <script src="lang/en.js"></script>
+    <script>var version = "v3"</script>
     <script src="res/version.js"></script>
     <script src="js/style.js"></script>
     <script src="js/tpl.js"></script>
