docs: privacy policy

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <div id="about">
                 <div id="copyright" v-html="$t('copyright.line')"></div>
                 <div id="copyright-detail" v-html="$t('copyright.detail')"></div>
+                <div id="server-announce" v-html="$t('copyright.server-announce')"></div>
                 <div id="copyright-hint" v-html="$t('copyright.hint')"></div>
             </div>
     </div>
