--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <div id="copyright" v-html="$t('copyright.line')"></div>
                 <div id="about-detail">
                     <div id="copyright-detail" v-html="$t('copyright.detail')"></div>
-                    <div id="privacy-policy" v-show="!notuselocal" v-html="$t('copyright.privacy')"></div>
+                    <div id="privacy-policy" v-show="!notusefast" v-html="$t('copyright.privacy')"></div>
                 </div>
-                <div><input type="checkbox" v-model="notuselocal"> {{$t('copyright.fast-compiler-not-use')}}</input></div>
+                <div><input type="checkbox" v-model="notusefast"> {{$t('copyright.fast-compiler-not-use')}}</input></div>
                 <div id="server-announce" v-html="$t('copyright.server-announce')"></div>
                 <div id="copyright-hint" v-html="$t('copyright.hint')"></div>
             </div>
