--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
                 </details>
             </div>
             <div id="code">
+                <input id="code_prompt" type="text">
+                <button onclick="generateCodeClick()">{{$t('generate')}}</button>
                 <div id="manualfile"></div>
             </div>
         </div> 
