style: improve style

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                     <button id="code_generate" onclick="generateCodeClick()">{{$t('generate')}}</button>
                     <button id="code_accept">{{$t('accept')}}</button>
                     <button id="code_reject">{{$t('reject')}}</button>
+                    <div id="llama3">{{$t('llama3')}}</div>
                 </div>
             </div>
         </div> 
