--- a/res/function/func2tex.html
+++ b/res/function/func2tex.html
@@ -9,6 +9,10 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <style>
+    :root {
+        color-scheme: light dark;
+    }
+
     body{
         display: flex;
         justify-content: center;
@@ -19,7 +23,7 @@
 
     #alert{
         display: none;
-        background-color: yellow;
+        background-color: light-dark(yellow, orange);
         padding: 5px;
         border-radius: 5px;
     }
