fix: inner purl dark mode override

--- a/res/function/func2tex.html
+++ b/res/function/func2tex.html
@@ -19,6 +19,8 @@
         align-items: center;
         min-height: 100vh;
         flex-direction: column;
+        background-color: Canvas;
+        color: CanvasText;
     }
 
     #alert{
