--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             --><div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" :title="$t('series.area')">
             </div><!--
-            --><div><input type="text" class="param" :placeholder="$t('series.paramter')" v-model="param" @keyup="onpachange" @focus="param_focused" @blur="param_losefocus"></div><!--
+            --><div><input type="text" class="param" :placeholder="$t('series.parameter')" v-model="param" @keyup="onpachange" @focus="param_focused" @blur="param_losefocus"></div><!--
             --><div><input type="text" class="coord" :placeholder="$t('series.funcxfull')" v-model="expression" @keyup="on_change" v-minimize="etd"></div><!--
             --><div v-show="etd"><input type="text" class="coord2" :placeholder="$t('series.funcy')" v-model="expression2" @keyup="on_change"></div><!--
             --><div v-show="etd"><input type="text" v-model="expression3" class="coord3" :placeholder="$t('series.funcz')" @keyup="on_change"></div><!--
@@ -322,7 +322,7 @@
             --><div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" :title="$t('series.area')">
             </div><!--
-            --><div><input type="text" class="param" v-model="param" @keyup="onpachange" :placeholder="$t('series.paramter')" @focus="param_focused" @blur="param_losefocus"></div><!--
+            --><div><input type="text" class="param" v-model="param" @keyup="onpachange" :placeholder="$t('series.parameter')" @focus="param_focused" @blur="param_losefocus"></div><!--
             --><parambar ref="subparambar" v-show="paramfoc" :command="command" :etd="etd" :global="false"></parambar><!--
             --><coordbar ref="subcoordbar" :cdata="cdata" v-show="shown" :td="etd"></coordbar><!--
             --><div v-show="!shown"><textarea class="coordtext" v-model="cdata" :placeholder="$t('series.coord')" @focus="coord_focused"></textarea></div>
@@ -384,7 +384,7 @@
             --><div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" :title="$t('series.area')">
             </div><!--
-            --><div><input type="text" class="param" v-model="param" @keyup="onpachange" :placeholder="$t('series.paramter')"  @focus="param_focused" @blur="param_losefocus"></div><!--
+            --><div><input type="text" class="param" v-model="param" @keyup="onpachange" :placeholder="$t('series.parameter')"  @focus="param_focused" @blur="param_losefocus"></div><!--
             --><div><input type="text" class="coord" v-model="tableparam" @keyup="on_change" :placeholder="$t('series.tableparam')" @focus="tableparam_focused" @mouseenter="tableparam_focused"></div><!--
             --><div v-show="enablesource">
                 <select v-model="sourceSelect" @change="on_change">
